AC_INIT([SwKeq], [2.101])
#AM_INIT_AUTOMAKE([-Wall])
AM_INIT_AUTOMAKE
#AM_EXTRA_RECURSIVE_TARGETS([octave])
AC_PROG_F77([f95 fl32 f77 fort77 xlf g77 f90 xlf90 gfortran ifort])
AC_LANG(Fortran 77)
##AC_SUBST(bindir, ./bin/)
AC_CONFIG_FILES([
Makefile
])
AC_PREFIX_DEFAULT([/usr/local/SwKeq])
#AC_MSG_CHECKING([testing])
#AC_MSG_RESULT([ok])
AC_OUTPUT
